---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\nfn foo() {\n    error_inline_macro_v2!(10 + \"wrong\");\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
    error<caret>_inline_macro_v2!(10 + "wrong");
    error_inline_macro_v2!(10 +<caret> "wrong");
"""
generated_code = """
No expansion information.
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: error_inline_macro_v2!(10 + "wrong")
    diagnostic:
      range:
        start:
          line: 1
          character: 4
        end:
          line: 1
          character: 40
      severity: 1
      code: E2200
      message: 'Plugin diagnostic: Error from procedural macro'
